# fabric-mcp-server

./: README.md  authenticate.py  claude_desktop_config.example.json  pyproject.toml  requirements.txt  server.py  setup.bat
